# ru-corrector-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  HOW_TO_RUN.md  Makefile  README.md  REFACTORING_SUMMARY.md  app.py  core_corrector.py  demo.py  diff_view.py  docker-compose.yml  openai_client.py  pyproject.toml  requirements.txt  ru-corrector-bot.service  telegram_bot.py  typograph_ru.py
.github/workflows/: test.yml
src/ru_corrector/: __init__.py  app.py  config.py  logging_config.py
src/ru_corrector/api/: __init__.py  schemas.py
src/ru_corrector/core/: __init__.py  engine.py  models.py
src/ru_corrector/providers/: __init__.py  languagetool.py  mock.py
src/ru_corrector/services/: __init__.py  core_corrector.py  diff_view.py  typograph_ru.py
src/ru_corrector/telegram/: bot.py
tests/: __init__.py  conftest.py  test_api.py  test_core_corrector.py  test_corrector_modes.py  test_engine.py  test_fallback_no_openai.py  test_typograph.py  test_voice_pipeline.py
